# agent-notifications

./: .gitignore  Cargo.toml  README.md  claude-hook-references.md  input.json
.github/workflows/: ci.yml  publish.yml
src/: configuration.rs  main.rs  utils.rs
src/processors/: claude.rs  opencode.rs
src/processors/claude/: icon.rs  init.rs  input_and_output.rs  mod.rs  structs.rs
src/processors/codex/: icon.rs  init.rs  input_and_output.rs  structs.rs
src/processors/opencode/: icon.rs  init.rs  input_and_output.rs  structs.rs
tests/: opencode_cli.rs
