[package]
description = "A CLI tool for managing agent notifications"
edition = "2024"
license = "MIT"
name = "agent-notifications"
version = "0.4.0"

[dependencies]
anyhow = "1.0.99"
clap = {version = "4.5.46", features = ["derive"]}
dirs = "6.0.0"
inquire = "0.7.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
strum = {version = "0.27.2", features = ["derive"]}
toml = "0.8.19"
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.6"
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11.7"

[[bin]]
name = "anot"
path = "src/main.rs"
