[package]
description = "A CLI tool for managing agent notifications"
edition = "2024"
exclude = ["assets/readme/"]
license = "GPL-3.0"
name = "agent-notifications"
version = "0.4.5"

[dependencies]
anyhow = "1.0.99"
atty = "0.2"
clap = {version = "4.5.46", features = ["derive"]}
dirs = "6.0.0"
inquire = "0.7.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
strum = {version = "0.27.2", features = ["derive"]}
toml = "0.9.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.6"
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11.7"

[[bin]]
name = "anot"
path = "src/main.rs"
